# mixeur-musique

./: .gitignore  CMakeLists.txt
data/playlists/: test
data/sound-boxes/: test
src/: main.cpp
src/model/: Playlist.cpp  Playlist.h
src/view/: Canvas.cpp  Canvas.h
